<?xml version="1.0"?>
<package format="2">
  <name>dragonfly</name>
  <version>0.0.0</version>
  <description>The dragonfly package</description>
  <maintainer email="ankurrc@tamu.edu">Ankur</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_export_depend>roscpp</build_export_depend>

  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <exec_depend>std_msgs</exec_depend> -->
  <!-- <build_export_depend>std_msgs</build_export_depend> -->

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

</package>
